syntax = "proto3";

package pb;

option go_package = "github.com/HoangLong2502/pharmago_be/pb";

import "entities/debt_note.proto";
import "google/protobuf/timestamp.proto";

message CreateDebtRepaymentRequest {
  int32 debt = 1;
  float money = 2;
}

message CreateDebtRepaymentResponse {
  int32 code = 1;
  string message = 2;
  int32 details = 3;
}