syntax = "proto3";

package pb;

option go_package = "github.com/HoangLong2502/pharmago_be/pb";

import "entities/debt_note.proto";

message ListDebtNoteRequest {
  int32 company = 1;
  string search = 2;
  string status = 3;
  int32 limit = 4;
  int32 page = 5;
}

message ListDebtNoteResponse {
  int32 code = 1;
  string message = 2;
  DebtNote details = 3;
}