syntax = "proto3";

package pb;

option go_package = "github.com/HoangLong2502/pharmago_be/pb";
import "entities/debt_note.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

message ReportDebtNoteRequest {
    int32 company = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "int32 value field",
        required: [
          "company"
        ],
    }];
    optional string type = 2;
    optional string status = 3;
    optional google.protobuf.Timestamp from = 4;
    optional google.protobuf.Timestamp to = 5;
}

message ReportDebtNoteResponse {
    int32 code = 1;
    string message = 2;
    DebtReport details = 3;
}